mobile number warning on login 1st and 5th time

--- a/referrer-portal/src/main/resources/templates/results.html
+++ b/referrer-portal/src/main/resources/templates/results.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" th:src="@{/js/auth/results/dist/js/vendor.js}"></script>
 	<script type="text/javascript" th:src="@{/js/auth/results/dist/js/app.js}"></script>
 	
+	<div th:replace="fragments/task/mobile :: mobile"></div>
 	<div th:replace="fragments/layout/footer :: footer">...</div>
 </body>
 </html>
