--- a/referrer-portal/src/main/resources/templates/results.html
+++ b/referrer-portal/src/main/resources/templates/results.html
@@ -8,7 +8,9 @@
 
 	<link th:href="@{/js/auth/results/dist/css/vendor.css}" rel="stylesheet"/>
 	<link th:href="@{/js/auth/results/dist/css/app.css}" rel="stylesheet"/>
-	<div id="body"></div>
+	<div style="margin-bottom:20px">
+		<div id="body"></div>
+	</div>
 	<script type="text/javascript" th:src="@{/js/auth/results/dist/js/vendor.js}"></script>
 	<script type="text/javascript" th:src="@{/js/auth/results/dist/js/app.js}"></script>
 	
