Updated texts on task 90

--- a/referrer-portal/src/main/resources/templates/apply.html
+++ b/referrer-portal/src/main/resources/templates/apply.html
@@ -21,11 +21,10 @@
       <div th:if="${successMsg}" id="succsessMsgDialog" class="ref-portal-instant-dialog-overlay">
 		    <div class="ref-portal-instant-dialog intro-text" style="height:32%;">
 	        <div>
-	        	<h3>Thank you for registering for I-MED Online 2.0!</h3>
-	        	Your application will be processed within one business day.<br/>
-	        	You will receive and email confirmation with your username once complete.<br/>
-	        	Note: You may need to check your junk folder for the email.<br/>
-	        	If you do not receive your email within 2 business days please contact your local CRM (Find service <a href="javascript:void(0);" onclick="window.open('https://i-med.com.au/doctors/referrer-support');">here</a>).
+	        	<h3>Thank you for registering for I-MED Online 2.0.</h3>
+	        	Applications generally take one business day to process after which time, you will receive an email with a link to validate your account.<br/>
+	        	If you do not receive your email within 2 days please contact your local CRM. (Find service <a href="javascript:void(0);" onclick="window.open('https://i-med.com.au/doctors/referrer-support');">here</a>).<br/><br/>
+	        	Note: You may need to check your junk folder for the email.
 	        </div>
 	        <div style="margin-top:20px;">    
 	        	<button class="btn btn-warning btn-block" onclick="$('#succsessMsgDialog').hide();">Close</button>
