--- a/referrer-portal/src/main/resources/templates/fragments/task/mobile.html
+++ b/referrer-portal/src/main/resources/templates/fragments/task/mobile.html
@@ -33,7 +33,7 @@
 		<div id="refPortalMobileDialog" class="ref-portal-mobile-overlay" style="display:none;">
 	    <div class="ref-portal-mobile-dialog">
 	        <div class="dialog-content">
-	        	<p class="intro-text">Please note your have not registered valid Australian mobile number yet.<br/>Please update your mobile number on My Account page.</p>
+	        	<p class="intro-text">Please note you have not registered valid Australian mobile number yet.<br/>Please update your mobile number on My Account page.</p>
 	        </div>
 	        <div class="dialog-botton-bar-warning">
 	          <button class="btn btn-primary btn-block" onClick='hideMobileDialog();'>Close</button>
