--- a/referrer-portal/src/main/resources/templates/fragments/task/mobile.html
+++ b/referrer-portal/src/main/resources/templates/fragments/task/mobile.html
@@ -21,8 +21,8 @@
 		      top: 20%;
 		      margin-right: auto;
 		      margin-left: auto;
-		      height: 20%;
-		      width: 50%;
+		      height: 25%;
+		      width: 57%;
 		      overflow-y: auto;
 		      background-color: #FFFFFF;
 		      padding: 12px;
@@ -33,7 +33,7 @@
 		<div id="refPortalMobileDialog" class="ref-portal-mobile-overlay" style="display:none;">
 	    <div class="ref-portal-mobile-dialog">
 	        <div class="dialog-content">
-	        	<p class="intro-text">Please note you have not registered valid Australian mobile number yet.<br/>Please update your mobile number on My Account page.</p>
+	        	<p class="intro-text">We notice you haven't included an Australian mobile number with your account details.<br>This allow for a password reset at any time.<br>Please visit the My Account page to add your number.</p>
 	        </div>
 	        <div class="dialog-botton-bar-warning">
 	          <button class="btn btn-primary btn-block" onClick='hideMobileDialog();'>Close</button>
