Email format upgrades

--- a/referrer-portal/src/main/resources/templates/apply.html
+++ b/referrer-portal/src/main/resources/templates/apply.html
@@ -22,8 +22,8 @@
 		    <div class="ref-portal-instant-dialog intro-text" style="height:32%;">
 	        <div>
 	        	<h3>Thank you for registering for I-MED Online 2.0.</h3>
-	        	Applications generally take one business day to process after which time, you will receive an email with a link to validate your account.<br/>
-	        	If you do not receive your email within 2 days please contact your local CRM. (Find service <a href="javascript:void(0);" onclick="window.open('https://i-med.com.au/doctors/referrer-support');">here</a>).<br/><br/>
+	        	Account applications generally take one business day to process. Shortly after, you'll receive a welcome email.<br/>
+	        	If you do not receive your email within two days please contact your local Customer Relationship Manager(CRM). To locate your CRM click <a href="javascript:void(0);" onclick="window.open('https://i-med.com.au/doctors/referrer-support');">here</a>.<br/><br/>
 	        	Note: You may need to check your junk folder for the email.
 	        </div>
 	        <div style="margin-top:20px;">    
