Urgent retitle to avoid confution with myimed

--- a/referrer-portal/src/main/resources/templates/apply.html
+++ b/referrer-portal/src/main/resources/templates/apply.html
@@ -9,7 +9,7 @@
 	<div class="image-procedures section"></div>
 	<div class="colour-light-grey section">
     <div class="wrapper">
-      <h1>Register with I-MED Online 2.0</h1>
+      <h1>I-MED Online 2.0 registration for medical practitioners</h1>
 
 			<div th:if="${errorMsg}" th:text="'Error: ' + ${errorMsg}" class="alert alert-danger" role="alert">    
 				Error: Unexpected problem occurred.
