--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
 		<h1></h1>
 		<div class="colour-light-grey section" style="padding-top: 0px;">
 			<div class="wrapper">
-				<h1>I-MED Online 2.0</h1>
+				<h1>I-MED Online 2.0 for medical practitioners</h1>
 				<div class="half-rule"></div>
 				<div class="intro-text">Welcome to I-MED Online 2.0, where
 					practitioners can quickly and easily access patient images and
