warning to prevent mixup w myimed

--- a/referrer-portal/src/main/resources/templates/apply.html
+++ b/referrer-portal/src/main/resources/templates/apply.html
@@ -7,6 +7,7 @@
 	<div th:replace="fragments/layout/header :: header"></div>
 	
 	<div class="image-procedures section"></div>
+	<div class="blue-alert-bar">This page is for medical practitioners only.<br/>If you are a patient, please visit <a href="https://myi-med.com.au">myi-med.com.au</a> to access your reports and images.</div>
 	<div class="colour-light-grey section">
     <div class="wrapper">
       <h1>I-MED Online 2.0 registration for medical practitioners</h1>
