--- a/referrer-portal/src/main/resources/templates/hospital.html
+++ b/referrer-portal/src/main/resources/templates/hospital.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="fragments/layout/head :: head">
-    <title id="pageTitle">Results</title>
+    <title id="pageTitle">Hospital</title>
 </head>
 <body>
 	<div th:replace="fragments/layout/header :: header">...</div>
