meta description by fragment head.html

--- a/referrer-portal/src/main/resources/templates/login.html
+++ b/referrer-portal/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:include="fragments/layout/head :: head">
+<head th:include="fragments/layout/head :: head(desc='Medical practitioners can log in to I-MED Online 2.0 to access patient radiology results via desktop, tablet and mobile.')">
     <title id="pageTitle">Sign in</title>
 </head>
 <body>
