--- a/referrer-portal/src/main/resources/templates/fragments/layout/head.html
+++ b/referrer-portal/src/main/resources/templates/fragments/layout/head.html
@@ -2,9 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	<head th:fragment="head">
 		<title th:include=":: #pageTitle">I-MED Online 2.0</title>
+		<meta th:if="${desc}" name="description" th:content="${desc}">
+ 		<meta th:unless="${desc}" name="description" content="I-MED Online 2.0 is where medical practitioners can access their patients' radiology results on desktop, tablet or mobile.">
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Security-Policy" />
-		<meta name="description" content="I-MED Online 2.0 is where medical practitioners can access their patients' radiology results on desktop, tablet or mobile.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     	
 		<!-- CSRF default header name is X-CSRF-TOKEN -->
