title to clarify practiioner only

--- a/referrer-portal/src/main/resources/templates/apply.html
+++ b/referrer-portal/src/main/resources/templates/apply.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="fragments/layout/head :: head">
-    <title id="pageTitle">Create Account</title>
+    <title id="pageTitle">I-MED Online 2.0 | For medical practitioners | Create Account</title>
 </head>
 <body>
 	<div th:replace="fragments/layout/header :: header"></div>
