--- a/referrer-portal/src/main/resources/templates/results.html
+++ b/referrer-portal/src/main/resources/templates/results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="fragments/layout/head :: head(desc='Medical practitioners can log in to I-MED Online 2.0 to access patient radiology results via desktop, tablet and mobile.')">
-    <title id="pageTitle">Results Medical Practitioner online access</title>
+    <title id="pageTitle">I-MED Online 2.0 | For medical practitioners | Patient Results</title>
 </head>
 <body>
 	<div th:replace="fragments/layout/header :: header">...</div>
