--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:include="fragments/layout/head :: head">
-	<title id="pageTitle">Home</title>
+	<title id="pageTitle">I-MED Online 2.0 | For medical practitioners | Home</title>
 </head>
 </head>
 <body>
