--- a/referrer-portal/src/main/resources/templates/admin.html
+++ b/referrer-portal/src/main/resources/templates/admin.html
@@ -12,7 +12,8 @@
 		<div class="wrapper">
 			<div class="list-group">
 				<a th:href="@{/admin/approve}" class="list-group-item">Account Approver</a><br/>
-				<a th:href="@{/admin/account}" class="list-group-item">Account Manager</a>
+				<a th:href="@{/admin/account}" class="list-group-item">Account Manager</a><br/>
+				<a th:href="@{/admin/filetoaccount}" class="list-group-item">File to Accounts</a>
 			</div>
 		</div>
 	</div>
