finalize. expose approvervalidator

--- a/referrer-portal/src/main/resources/templates/admin.html
+++ b/referrer-portal/src/main/resources/templates/admin.html
@@ -12,6 +12,7 @@
 		<div class="wrapper">
 			<div class="list-group">
 				<a th:href="@{/admin/approve}" class="list-group-item">Account Approver</a><br/>
+				<a th:href="@{/admin/approvervalidator}" class="list-group-item">Account Approver with Validations</a><br/>				
 				<a th:href="@{/admin/account}" class="list-group-item">Account Manager</a><br/>
 			</div>
 		</div>
