--- a/referrer-portal/src/main/resources/templates/apply.html
+++ b/referrer-portal/src/main/resources/templates/apply.html
@@ -10,8 +10,7 @@
 	<div class="blue-alert-bar">This page is for medical practitioners only.<br/>If you are a patient, please visit <a href="https://myi-med.com.au">myi-med.com.au</a> to access your reports and images.</div>
 	<div class="colour-light-grey section">
     <div class="wrapper">
-      <h1>I-MED Online 2.0 registration for medical practitioners</h1>
-
+      <h1>Medical practitioners registration for access to I-MED clinical imaging</h1>
 			<div th:if="${errorMsg}" th:text="'Error: ' + ${errorMsg}" class="alert alert-danger" role="alert">    
 				Error: Unexpected problem occurred.
 			</div>
