Changes to display covid banner.

--- a/referrer-portal/src/main/resources/static/css/public/imedwebflow.css
+++ b/referrer-portal/src/main/resources/static/css/public/imedwebflow.css
@@ -2494,7 +2494,7 @@ strong {
 }
 
 .image-index.referrer {
-	background-image: url('../../images/public/order_pads.jpg');
+	background-image: url('../../images/public/covid.jpg');
 	background-position: 50% 3%;
 	background-size: cover;
 	background-repeat: no-repeat
