--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -38,14 +38,12 @@
 					</div>
 					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"
-							onclick="window.open('https://www.i-med.com.au/about-us/dust-diseases');"
+							onclick="window.open('https://i-med.com.au/about-us/articles-and-news/coronavirus-update');"
 							href="javascript:void(0);"
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<div class="image-index referrer"></div>
-							<div class="link-index">Dust diseases on the rise</div>
-							<p>Health professionals are alarmed at the rise in diagnosis
-								of dust diseases such as silicosis among stonemasons and
-								construction workers.</p>
+							<div class="link-index">Our clinics are open, with usual hours</div>
+							<p>We are following all guidelines issued by the Department of Health to ensure the health and safety of our patients and our staff.</p>
 						</a>
 					</div>
 				</div>
