--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -25,6 +25,15 @@
 					reports, on desktop, tablet or mobile. From this page practitioners
 					can also order referral pads and ask for technical support.</div>
 				<div class="row w-row">
+					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
+						<a class="w-inline-block wrapper-card" data-ix="hover-profile"
+							th:href="@{/electronicreferral}"
+							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
+							<div class="image-index referrer"></div>
+							<div class="link-index">Telehealth - Email addresses and I-MED e-referrals</div>
+							<p>Click here for advice on email address for telehealth referrals. E-referrals are available from the main toolbar above.</p>
+						</a>
+					</div>
 					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"							
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/results}">
@@ -34,16 +43,6 @@
 							<p>I-MED Online 2.0 gives practitioners access to diagnostic
 								images and reports - regardless of your location - quickly and
 								easily.</p>
-						</a>
-					</div>
-					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
-						<a class="w-inline-block wrapper-card" data-ix="hover-profile"
-							onclick="window.open('https://i-med.com.au/about-us/articles-and-news/coronavirus-update');"
-							href="javascript:void(0);"
-							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
-							<div class="image-index referrer"></div>
-							<div class="link-index">Our clinics are open, with usual hours</div>
-							<p>We are following all guidelines issued by the Department of Health to ensure the health and safety of our patients and our staff.</p>
 						</a>
 					</div>
 				</div>
