--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -25,37 +25,32 @@
 					reports, on desktop, tablet or mobile. From this page practitioners
 					can also order referral pads and ask for technical support.</div>
 				<div class="row w-row">
+					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
+						<a class="w-inline-block wrapper-card" data-ix="hover-profile"							
+							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/electronicreferral}">
+							<div class="image-index resources"></div>
+							<div class="link-index">E-referrals now available</div>
+							<p>Practitioners can now use our E-referral for imaging requests at I-MED Radiology. It's the best way to ensure your patients get the diagnostic imaging they need.</p>
+						</a>
+					</div>
 					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"
 							onclick="window.open('https://i-med.com.au/about-us/COVID-19Update');"
 							href="javascript:void(0);"
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<div class="image-index referrer"></div>
-							<div class="link-index">Telehealth - Email addresses and I-MED e-referrals</div>
-							<p>Click here for advice on email address for telehealth referrals. E-referrals are available from the main toolbar above.</p>
-						</a>
-					</div>
-					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
-						<a class="w-inline-block wrapper-card" data-ix="hover-profile"							
-							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/results}">
-							<div class="image-index"></div>
-							<div class="link-index">Results - access patient reports
-								and images</div>
-							<p>I-MED Online 2.0 gives practitioners access to diagnostic
-								images and reports - regardless of your location - quickly and
-								easily.</p>
+							<div class="link-index">Telehealth information for practitioners</div>
+							<p>Practitioners can now refer patients electronically for radiology examinations after a Telehealth consultation. You can refer via email or our new E-referral form.</p>
 						</a>
 					</div>
 				</div>
 				<div class="row w-row">
 					<div class="col-1-2 col-1-2-padding-left w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"							
-							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/about}">
-							<div class="image-index resources"></div>
-							<div class="link-index">About 2.0</div>
-							<p>New I-MED Online 2.0 integrates both web and mobile,
-								giving you to access patient reports, wherever you are. Find out
-								more here.</p>
+							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);" th:href="@{/results}">
+							<div class="image-index"></div>
+							<div class="link-index">Results - access patient images and reports</div>
+							<p>I-MED Online 2.0 gives practitioners access to diagnostic images and reports via desktop and mobile. We are progressively rolling out I-MED Online 2.0 across the country.</p>
 						</a>
 					</div>
 					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
@@ -65,9 +60,7 @@
 							<div class="image-index support notice"
 								style="background-size: 568px;"></div>
 							<div class="link-index">Support</div>
-							<p>Should you need support with the new I-MED Online 2.0,
-								help is right at hand. Our support team is here to assist by
-								phone, chat or email.</p>
+							<p>Should you need support with the new E-Referral, with I-MED Online 2.0 or any other issue, help is at hand. Our support team is here to assist by phone, chat or email.</p>
 						</a>
 					</div>
 				</div>
