https://i-med.com.au/doctors/telehealth

--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
 					</div>
 					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
 						<a class="w-inline-block wrapper-card" data-ix="hover-profile"
-							onclick="window.open('https://i-med.com.au/about-us/COVID-19Update');"
+							onclick="window.open('https://i-med.com.au/doctors/telehealth');"
 							href="javascript:void(0);"
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<div class="image-index referrer"></div>
