autocomplete google in addresses

--- a/referrer-portal/src/main/resources/templates/electronicreferral.html
+++ b/referrer-portal/src/main/resources/templates/electronicreferral.html
@@ -6,6 +6,8 @@
 <body>
 	<div th:replace="fragments/layout/header :: header"></div>
 	
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDosWPVMcgfCn57Ui0Ip52air8v9oozHx4&sensor=false&libraries=places"></script>
+	
 	<div class="section">
 		<div class="wrapper">
 			<link rel="stylesheet" th:href="@{/js/public/electronicreferral/dist/styles.css}">
