control button dis/able

--- a/referrer-portal/src/main/resources/templates/electronicreferraldownload.html
+++ b/referrer-portal/src/main/resources/templates/electronicreferraldownload.html
@@ -11,15 +11,15 @@
 
 		<div class="wrapper">
 			<h2 th:if="${status=='error'}">Your passcode does not match. Please try again.</h2>
-			<h1 th:if="${status=='invalid'}">URL is invalid or expired.</h1>
+			<h1 th:if="${status=='invalid'}">URL is invalid, expired, or had too many passcode failures.</h1>
 			<div th:if="${status=='normal' || status=='error'}">
 				<h2 th:if="${secretmode=='referrer'}">Please enter the Provide Number your provided when completing the request to download e-referral.</h2>
 				<h2 th:if="${secretmode=='patient'}">Please enter your date of birth to download e-referral.</h2>
 				<form name="f" th:action="@{/electronicreferraldownload}" th:object="${fmodel}" method="post">  
-					<input th:field="*{passcode}" class="field-text w-input" placeholder="Your Passcode" type="text" />
+					<input id="downloadpasscode" onkeyup="passcodeKeyup()" th:field="*{passcode}" class="field-text w-input" placeholder="Your Passcode" type="text" />
 					<input th:field="*{secret}" name="secret" type="hidden"/>
           <div class="form-actions">
-          	<button type="submit" class="link-info button-primary w-button full-width">Download</button>
+          	<button id="downloadbutton" type="submit" class="link-info button-primary w-button full-width" disabled>Download</button>
           </div>
 				</form>		
 				<ul style="color:#3a3a3a;">
@@ -28,7 +28,15 @@
 				</ul>
 			</div>
 		</div>
-
+		<script>
+			function passcodeKeyup() {
+				if($("#downloadpasscode").val().length > 0) {
+					$("#downloadbutton").removeAttr("disabled");
+				} else {
+					$("#downloadbutton").attr("disabled", "disabled");	
+				}
+			}
+		</script>
 	</div>
 
 	<div th:replace="fragments/layout/footer :: footer"></div>
