--- a/referrer-portal/src/main/resources/templates/electronicreferraldownload.html
+++ b/referrer-portal/src/main/resources/templates/electronicreferraldownload.html
@@ -14,7 +14,7 @@
 			<h1 th:if="${status=='invalid'}">URL is invalid, expired, or had too many passcode failures.</h1>
 			<div th:if="${status=='normal' || status=='error'}">
 				<h2 th:if="${secretmode=='referrer'}">Please enter the Provide Number your provided when completing the request to download e-referral.</h2>
-				<h2 th:if="${secretmode=='patient'}">Please enter your date of birth to download e-referral.</h2>
+				<h2 th:if="${secretmode=='patient'}">Please enter your date of birth as DD/MM/YYYY format to download e-referral.</h2>
 				<form name="f" th:action="@{/electronicreferraldownload}" th:object="${fmodel}" method="post">  
 					<input id="downloadpasscode" onkeyup="passcodeKeyup()" th:field="*{passcode}" class="field-text w-input" placeholder="Your Passcode" type="text" />
 					<input th:field="*{secret}" name="secret" type="hidden"/>
