--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -39,8 +39,8 @@
 							href="javascript:void(0);"
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<div class="image-index referrer"></div>
-							<div class="link-index">Telehealth information for practitioners</div>
-							<p>Practitioners can now refer patients electronically for radiology examinations after a Telehealth consultation. You can refer via email or our new E-referral form.</p>
+							<div class="link-index">Telehealth/PMS referral templates</div>
+							<p>You can now download an I-MED referral template into your practice management software (PMS). Visit our Telehealth page for more information.</p>
 						</a>
 					</div>
 				</div>
