--- a/referrer-portal/src/main/resources/templates/fragments/layout/header.html
+++ b/referrer-portal/src/main/resources/templates/fragments/layout/header.html
@@ -32,6 +32,7 @@
 						<a class="home nav-link w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link wpthemeLeft" th:href="@{/mycrm}">My CRM</a>
 						<a class="home nav-link w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link wpthemeLeft" th:href="@{/support}">Support</a>
 						<a class="home nav-link w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link wpthemeLeft" th:href="@{/feedback}">Feedback</a>
+						<a class="home nav-link w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link wpthemeLeft" th:href="@{/about}">About</a>
 						<a class="home nav-link w-hidden-medium w-hidden-small w-hidden-tiny w-nav-link wpthemeLeft" sec:authorize="isAuthenticated()" th:href="@{/profile}">My Account</a>
 					</div>
 				</div>
@@ -122,6 +123,9 @@
 	            </a>	            
 	            <a th:href="@{/feedback}" class="nav-link-mobile no-expand w-hidden-main">
 	                <span lang="en" dir="ltr">Feedback</span>
+	            </a>
+	            <a th:href="@{/about}" class="nav-link-mobile no-expand w-hidden-main">
+	                <span lang="en" dir="ltr">About</span>
 	            </a>
 	            <a sec:authorize="isAuthenticated()" th:href="@{/profile}" class="nav-link-mobile no-expand w-hidden-main">
 	                <span lang="en" dir="ltr">My Account</span>
