--- a/referrer-portal/src/main/resources/templates/fragments/layout/footer.html
+++ b/referrer-portal/src/main/resources/templates/fragments/layout/footer.html
@@ -14,6 +14,7 @@
 				</div>
 			</div>
 		</div> 
+		<div sec:authorize="isAuthenticated()" th:replace="fragments/task/resetonlogin :: resetonlogin"></div>
 		<div sec:authorize="isAuthenticated()" th:replace="fragments/task/tandc :: tandc"></div>
 		<div sec:authorize="isAuthenticated()" th:replace="fragments/task/timeout :: timeout"></div>
 		<div sec:authorize="isAuthenticated()" th:replace="fragments/task/chkemail :: chkemail"></div>
