--- a/referrer-portal/src/main/resources/templates/home.html
+++ b/referrer-portal/src/main/resources/templates/home.html
@@ -50,7 +50,7 @@
 							style="transition: color 0.2s ease 0s, transform 100ms ease 0s; transform: translateX(0px) translateY(0px) translateZ(0px);">
 							<div class="image-index referrer"></div>
 							<div class="link-index">Telehealth/PMS referral templates</div>
-							<p>You can now download an I-MED referral template into your practice management software (PMS). Visit our Telehealth page for more information.</p>
+							<p>You can download an I-MED referral template into your practice management software (PMS). Please visit our Telehealth page for more information on this.</p>
 						</a>
 					</div>
 					<div class="col-1-2 col-1-2-padding-right w-col w-col-6">
