--- a/referrer-portal/src/main/resources/templates/termsofuse.html
+++ b/referrer-portal/src/main/resources/templates/termsofuse.html
@@ -41,8 +41,7 @@
 				<p class="Normal" style="margin-top: 0pt;">&nbsp;</p>
 				<p class="Normal" style="line-height: 10pt;">
 					<span class="Normal__Char"
-						style="font-family: 'Arial', 'Arial'; font-size: 11pt; line-height: 11pt; color: #1F497D;">I
-						am a registered medical practitioner. </span>
+						style="font-family: 'Arial', 'Arial'; font-size: 11pt; line-height: 11pt; color: #1F497D;">I am a registered health practitioner.</span>
 				</p>
 				<p class="Normal">&nbsp;</p>
 				<p class="Normal" style="line-height: 10pt;">
